@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+5/18/22: Created directory for copying EER gain reference if it is not there
+yet (In 4.1).
+
 5/17/22: Returned DE dark reference image with server 2.5 (In 4.11).
 
 5/17/22: Fixed one source of zero intensity calibrations (In 4.11).
